--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
+    "react-modern-drawer": "^1.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
