--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.9.0",
     "html-react-parser": "^5.1.10",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.0",
