--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
