--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
-    "sweetalert2": "^11.11.1"
+    "sweetalert2": "^11.11.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
